Assert test path - fix